BACKLOG-1326 fixed minor teams layout issues

--- a/coin-teams-war/src/main/webapp/css/teams.css
+++ b/coin-teams-war/src/main/webapp/css/teams.css
@@ -184,7 +184,7 @@ fieldset {
 }
 
 .label-field-wrapper input[type=checkbox] {
-  margin: 0 5px 15px 15px;
+  margin: 0 5px 5px;
 }
 
 .label-field-wrapper textarea {
@@ -203,7 +203,6 @@ fieldset {
   vertical-align: top;
   color: #999;
   font-style: italic;
-  margin: 0 0 0 115px;
 }
 
 .label-field-wrapper .inputinfo {
@@ -238,7 +237,8 @@ label.consent {
 
 span.consent-wrapper {
 	float: left;
-	width: 100px;
+	width: 115px;
+	height: 30px;
 }
 
 .file-input-field-info{
